--- a/about-me.html
+++ b/about-me.html
@@ -29,7 +29,8 @@
           <li><a href="./skills.html">Skills</a></li>
           <li><a href="./education.html">Education</a></li>
           <li><a href="./experience.html">Experience</a></li>
-          <li><a href="projects.html">Projects</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./HumayraChowdhury.pdf">CV</a></li>
         </ul>
       </nav>
 
