Revise education section with module grades
Updated education details and added module grades.

--- a/education.html
+++ b/education.html
@@ -63,18 +63,30 @@
               <li>BSc (Hons): Computer Science</li>
             </ul>
 
-            <p class=accent-text>
-              Modules Undertaken:
+            <p class=accent-text >Modules Undertaken:</p>
+
+            <div id="modules-list">
               <ul>
-                <li>Procedural Programming</li>
-                <li>Logic & Discrete Structures</li>
-                <li>Computer Systems & Networks</li>
-                <li>Personal Research & Development</li>
-                <li>Object Oriented Programming</li>
-                <li>Automata & Formal Languages</li>
-                <li>Fundamentals of Web Technology</li>
-                <li>Information & Systems Analysys</li>
+                <li>Procedural Programming (84%)</li>
+                <li>Object Oriented Programming (78%)</li>
+                <li>Fundamentals of Web Technology (91%)</li>
+                <li>Computer Systems & Networks (89%)</li>
+                <li>Logic & Discrete Structures (90%)</li>
+                <li>Automata & Formal Languages (97%)</li>
+                <li>Information & Systems Analysis (98%)</li>
+                <li>Professional Research & Development (84%)</li>
               </ul>
+              <ul>
+                <li>Software Engineering</li>
+                <li>Algorithms & Data Structures</li>
+                <li>Database Systems</li>
+                <li>Probability & Matrices</li>
+                <li>Graphical User Interfaces</li>
+                <li>Operating Systems</li>
+                <li>Internet Protocols</li>
+              </ul>
+            </div>
+
           </div>
         </section>
 
