Revise experience section with new AWS course details
Updated experience section to include AWS training and modified existing work experience details.

--- a/experience.html
+++ b/experience.html
@@ -49,6 +49,39 @@
 
     <section id="experience-section">
 
+        <div class="content-box">
+
+        <section class="simple-section">
+          <div class="simple-section-text">
+            <header>
+              <h2>Amazon Web Services</h2>
+            </header>
+
+            <p class=accent-text>CLoud Foundations Course - August 2025</p>
+            
+            <ul>
+              <li>
+                Built a solid foundation in cloud computing principles, including service models, deployment 
+                strategies, and cost optimisation through 20 hours of AWS training and labs.
+              </li>
+              <li>
+                Explored 5+ core services provided by AWS including EC2, S3, IAM and VPCs.
+              </li>
+              <li>
+                Applied concepts through guided AWS labs (e.g. configuring IAM roles, creating secure VPC 
+                networks), enhancing understanding of how cloud services are managed in practise. 
+              </li>
+            </ul>
+          </div>
+
+          <div id="tcs-img">
+            <img src="./images/amazon-logo.png" alt="TCS Logo" class="medium-img">
+          </div>
+        </section>
+
+      </div>
+
+
       <div class="content-box">
 
         <section class="simple-section">
@@ -80,6 +113,7 @@
         </section>
 
       </div>
+      
 
       <div class="content-box">
 
